# DLabController

./: .gitignore  AvaspecController.py  DlabController.py  LICENSE  README.md  SFGTemporalOverlap.py  TODO.md  TODO_liste.txt  ThorlabsController.py  communication_between_class_test.py  correction_tests.py  last_settings.txt  pyproject.toml  requirements.txt  temp_file.py
.github/workflows/: docs.yml
Analyze_Dlab/: analyze_beam.py  analyze_harmonics.py  phase_retrieval.py  utils_tools.py
Analyze_Dlab/other_tools/: open_tif.py
Simulate_Dlab/: parameters_dlab.py
Simulate_Dlab/Gas_density/: homogeneous_medium.py  inhomogeneous_medium.py
Simulate_Dlab/Numerical_SLM/: Numerical_SLM.py  diagnostic_functions.py  phase_functions.py  plot_functions.py  (+2 more)
config/: config.yaml
diagnostic_board/: beam_treatment_functions.py  daheng_camera.py  diagnostic_board.py  diagnostic_board_new.py  focus_diagnostic.py  nl_pr.py  phase_retrieval.py
diagnostics/: diagnostics_helpers.py  utils.py
hardware/: PhaseSettings.py
model/: HHGView.py  aberration_correction.py  calibrator.py  dummy_old_phase_retrieval.py  feedbacker.py  helpers.py  hologram_generation.py  phase_settings.py  testz.py
ressources/: dummy_log  print_tree.py  settings.py  settings_green.txt  settings_red.txt  slm_infos.py
scripts/: run.ps1  setup.ps1
stages_and_sensors/: thorlabs_stages.py  waveplate_calibrator.py
test/: test_dll.py  test_piezojena.py  test_slm.py  test_zaber.py
views/: andor_xuv_camera.py  camera_control.py  daheng_camera.py  mcp.py  mcp_camera.py  pike_camera.py  questionbox.py
(+248 files in other folders)
